Added download query parameter to redeem postit